<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">دار القرآن</string>
    <string name="teacherName">اسم المستخدم</string>
    <string name="password">كلمة السر</string>
    <string name="welcome">تسجيل الدخول</string>
    <string name="have_not_account">ليس لديك حساب؟</string>
    <string name="sign_up">إنشاء حساب</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="rewrite_password">تاكيد كلمة السر</string>
    <string name="login" />
    <string name="update_students">اضافة او حذف طالب</string>
    <string name="student_list">قائمة الطلاب</string>
    <string name="audience">تسجيل الحضور</string>
    <string name="add_student">إضافة طالب</string>
    <string name="student_name">اسم الطالب</string>
    <string name="delete">حذف طالب</string>
    <string name="save">حفظ</string>
    <string name="quran_Memorizing">الحفظ</string>
    <string name="recitation">التجويد</string>
    <string name="notes">تسجيل ملاحظات</string>
    <string name="absence">الغياب</string>
    <string name="zero">0</string>
    <string name="teacher">معلم</string>
    <string name="assistance">مساعد</string>
    <string name="delete_assistants">حذف مساعد</string>
    <string name="add_assistants">إضافة مساعد</string>
    <string name="add">إضافة</string>
    <string name="updateAssistants">تعديل المساعدين</string>
    <string name="teacherHomePage">الصفحة الرئيسية</string>
    <string name="roles_update">تعديل الاحكام</string>
    <string name="role_name">إسم الحكم</string>
    <string name="rules_add">إضافة حكم</string>
    <string name="back">رجوع</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="year_of_birth">سنة الميلاد</string>
    <string name="update_student_info">تعديل معلومات</string>
</resources>