<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TeacherHomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="349dp"
        android:layout_height="642dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="38dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/label"
            android:text="@string/teacherHomePage" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="171dp"
            android:src="@drawable/login_icon"
            tools:ignore="ContentDescription" />

        <Button
            style="@style/myButton"
            android:onClick="updateStudents"
            android:text="@string/update_students" />

        <Button
            style="@style/myButton"
            android:onClick="studentList"
            android:text="@string/student_list" />

        <Button
            style="@style/myButton"
            android:onClick="audience"
            android:text="@string/audience" />

        <Button
            android:id="@+id/updateAssistants"
            style="@style/myButton"
            android:onClick="updateAssistants"
            android:text="@string/updateAssistants" />

        <Button
            style="@style/myButton"
            android:onClick="updateRules"
            android:text="@string/roles_update" />

    </LinearLayout>

    <Button
        style="@style/backButton"
        android:text="@string/sign_out"
        android:onClick="finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>