<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StudentHomeActivity">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="349dp"
        android:layout_height="642dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            style="@style/label"
            android:id="@+id/student_home" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="171dp"
            android:src="@drawable/login_icon"
            tools:ignore="ContentDescription" />

        <Button
            style="@style/myButton"
            android:onClick="memorizing"
            android:text="@string/quran_Memorizing" />

        <Button
            style="@style/myButton"
            android:onClick="recitation"
            android:text="@string/recitation" />

        <Button
            style="@style/myButton"
            android:onClick="notes"
            android:text="@string/notes" />

        <Button
            style="@style/myButton"
            android:onClick="absence"
            android:text="@string/absence" />

        <Button
            style="@style/myButton"
            android:onClick="update"
            android:text="@string/update_student_info" />
    </LinearLayout>

    <Button
        style="@style/backButton"
        android:text="@string/back"
        android:onClick="finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>