<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="349dp"
        android:layout_height="642dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="38dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            style="@style/myButton"
            android:onClick="updateStudents"
            android:text="@string/update_students"/>

        <Button
            style="@style/myButton"
            android:onClick="studentList"
            android:text="@string/student_list" />

        <Button
            style="@style/myButton"
            android:onClick="audience"
            android:text="@string/audience" />

        <Button
            android:id="@+id/updateAssistants"
            style="@style/myButton"
            android:onClick="updateAssistants"
            android:text="@string/updateAssistants" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>