<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".StudentAddActivity">


    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="349dp"
        android:layout_height="642dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="75dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/student_name"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:hint="@string/student_name"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/yearOfBirth"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:hint="@string/year_of_birth"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />


        <EditText
            android:id="@+id/phoneNumber"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            tools:ignore="Autofill,LabelFor" />

        <Button
            style="@style/myButton"
            android:onClick="addStudent"
            android:text="@string/add_student" />

    </LinearLayout>

    <Button
        style="@style/backButton"
        android:onClick="finish"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>