<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".StudentsUpdateActivity">


    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="349dp"
        android:layout_height="642dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="75dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/student_name"
            style="@style/EditText"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:hint="@string/student_name"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />

        <Button
            style="@style/myButton"
            android:onClick="addStudent"
            android:text="@string/add_student" />

        <ListView
            android:id="@+id/students"
            android:background="@color/white"
            android:layout_width="300dp"
            android:layout_height="418dp" />

        <Button
            android:id="@+id/deleteStudent"
            style="@style/myButton"
            android:onClick="delete"
            android:enabled="false"
            android:text="@string/delete" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>